deleted release